Updated reporting functions
